# IICPC-Hackathon

./: .gitignore  DESIGN_DOCUMENT.md  README.md  run_end_to_end.sh
bot_fleet/: .dockerignore  CMakeLists.txt  Dockerfile  Makefile  docker-compose.yml  vcpkg.json  vcpkg.json.bak
bot_fleet/mock_server/: mock_exchange.cpp
bot_fleet/scripts/: run_benchmarks.sh
bot_fleet/src/: main.cpp
bot_fleet/src/bot/: bot.cpp  bot.hpp  bot_coordinator.cpp  bot_coordinator.hpp
bot_fleet/src/market/: market_simulator.hpp  order.hpp
bot_fleet/src/metrics/: hdr_histogram.cpp  hdr_histogram.hpp  metrics_aggregator.cpp  metrics_aggregator.hpp  metrics_collector.cpp  metrics_collector.hpp  telemetry_reporter.cpp  telemetry_reporter.hpp
bot_fleet/src/net/: connection.cpp  connection.hpp
bot_fleet/tests/: CMakeLists.txt
bot_fleet/tests/concurrency/: test_clean_shutdown.cpp  test_concurrent_metrics.cpp  test_seqlock_torn_reads.cpp  test_shard_isolation.cpp
bot_fleet/tests/support/: market_invariants.hpp  test_access.hpp
bot_fleet/tests/unit/: test_hdr_histogram.cpp  test_market_simulator.cpp  test_metrics_aggregation.cpp  test_order_generation.cpp  test_persona_generation.cpp  test_seqlock.cpp
dashboard-ui/: package-lock.json  package.json  vite.config.ts  vite.config.ts.timestamp-1782484440291-e44024a53c055.mjs
dashboard-ui/src/: App.tsx  index.css
dashboard-ui/src/api/: mockServices.ts
dashboard-ui/src/hooks/: useDashboardData.ts
dashboard-ui/src/layouts/: MainLayout.tsx  Navbar.tsx  Sidebar.tsx
dashboard-ui/src/pages/: Architecture.tsx  Dashboard.tsx  Docs.tsx  Fleet.tsx  Landing.tsx  Leaderboard.tsx  Sandbox.tsx  Submissions.tsx  Telemetry.tsx
scripts/: run_integration.sh
submission_engine/: .dockerignore  .env  .env.example  Makefile  bot  docker-compose.yml  docker-compose.yml.bak  go.mod  go.sum  main.cpp
submission_engine/api/openapi/: submission-api.yaml
submission_engine/api/proto/: build.proto  common.proto  deploy.proto  health.proto  upload.proto
submission_engine/deploy/seccomp/: sandbox-default.json
submission_engine/docs/: 01_ARCHITECTURE.md  02_WORKFLOW.md  03_SECURITY.md  04_INFRASTRUCTURE.md  05_TERRAFORM.md  06_ROADMAP.md
submission_engine/migrations/: 0001_init.down.sql  0001_init.up.sql
submission_engine/pkg/bootstrap/: bootstrap.go
submission_engine/pkg/events/: bus.go  events.go  events_test.go  payloads.go
submission_engine/pkg/models/: models_test.go  types.go  uuid.go  validation.go
submission_engine/pkg/orchestrator/: orchestrator.go
submission_engine/pkg/security/: apparmor.go  build_job.go  k8s_types.go  sandbox.go  seccomp.go  security_test.go
submission_engine/pkg/statemachine/: statemachine.go  statemachine_test.go
submission_engine/pkg/store/: interfaces.go  memory.go  memory_test.go  upload_url.go
submission_engine/pkg/telemetry/: logger.go  logger_test.go  metrics.go
submission_engine/services/build-service/: Dockerfile
submission_engine/services/deployment-manager/: Dockerfile
submission_engine/services/health-monitor/: Dockerfile
submission_engine/services/sandbox-runner/: Dockerfile
submission_engine/services/submission-api/: Dockerfile
submission_engine/services/upload-service/: Dockerfile
submission_engine/test/e2e/: README.md
telemetry_engine/: Makefile  docker-compose.yml  docker-compose.yml.bak
telemetry_engine/backend/: .dockerignore  .env.example  Dockerfile  go.mod  go.sum
telemetry_engine/docs/: ARCHITECTURE.md
telemetry_engine/frontend/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
(+136 files in other folders)
